增加分页大小的控制参数,以及JVM的启动参数配置